--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blue;
+  background-color: pink;
   margin: 0;
   padding: 0;
   font-family: "Roboto Mono", monospace;
@@ -23,22 +23,31 @@ body {
 .container button {
   cursor: pointer;
   font-size: 2rem;
-  border: 1px solid white;
   outline: none;
-  background-color: aqua;
+  background-color: #1e2326;
+  color: white;
+  border: 1px solid white;
 }
 
 .container button:hover {
-  background-color: rebeccapurple;
+  background-color: #282f33;
 }
 
 .container .span-two {
   grid-column: span 2;
 }
 
+.container .operand {
+  background-color: #5e4bb6;
+}
+
+.container .operand:hover {
+  background-color: #6b53d3;
+}
+
 .container .output {
   grid-column: 1/-1;
-  background-color: brown;
+  background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,12 +67,12 @@ body {
 }
 
 .container .output .previous-operand {
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(30, 35, 38, 0.75);
   font-size: 1.5rem;
 }
 
 .container .output .current-operand {
-  color: white;
+  color: #1e2326;
   font-size: 2.5rem;
 }
 /*# sourceMappingURL=index.css.map */
