--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,7 @@
+$primary-color: #1e2326;
+$secondary-color: #5e4bb6;
 body {
-  background-color: blue;
+  background-color: pink;
   margin: 0;
   padding: 0;
   font-family: "Roboto Mono", monospace;
@@ -16,22 +18,29 @@ body {
   button {
     cursor: pointer;
     font-size: 2rem;
-    border: 1px solid white;
     outline: none;
-    background-color: aqua;
-  }
-
-  button:hover {
-    background-color: rebeccapurple;
+    background-color: $primary-color;
+    color: white;
+    border: 1px solid white;
+    &:hover {
+      background-color: #282f33;
+    }
   }
 
   .span-two {
     grid-column: span 2;
   }
 
+  .operand {
+    background-color: $secondary-color;
+
+    &:hover {
+      background-color: #6b53d3;
+    }
+  }
   .output {
     grid-column: 1/-1;
-    background-color: brown;
+    background-color: white;
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
@@ -42,12 +51,12 @@ body {
     font-size: 2rem;
 
     .previous-operand {
-      color: rgba($color: #ffffff, $alpha: 0.75);
+      color: rgba($color: $primary-color, $alpha: 0.75);
       font-size: 1.5rem;
     }
 
     .current-operand {
-      color: white;
+      color: $primary-color;
       font-size: 2.5rem;
     }
   }
