--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,7 +1,12 @@
 $primary-color: #1e2326;
 $secondary-color: #5e4bb6;
+
+* {
+  font-family: "Roboto Mono", monospace;
+  font-weight: normal;
+}
 body {
-  background-color: pink;
+  background-color: $primary-color;
   margin: 0;
   padding: 0;
   font-family: "Roboto Mono", monospace;
@@ -21,7 +26,7 @@ body {
     outline: none;
     background-color: $primary-color;
     color: white;
-    border: 1px solid white;
+    border: 2px solid white;
     &:hover {
       background-color: #282f33;
     }
